Fixed bug #36083 (SoapClient waits for responses on one-way operations)